Complete rewrite of the spider

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,11 +1,11 @@
 # Automatically created by: scrapy startproject
 #
 # For more information about the [deploy] section see:
-# http://doc.scrapy.org/en/latest/topics/scrapyd.html
+# https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = tutorial.settings
+default = IMDBspider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = tutorial
+project = IMDBspider
